crates/shiplog-render-json/tests/snapshots/snapshot__multiple_events_jsonl.snap
---
source: crates/shiplog-render-json/tests/snapshot.rs
assertion_line: 38
expression: text
---
{"id":"d918be68e3cbb9beda0d2db2bfab1bf0c2f4749f1fd5dbdb92a76e974f4ee6a0","kind":"PullRequest","occurred_at":"1970-01-01T00:00:00Z","actor":{"login":"user","id":null},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Unknown"},"payload":{"type":"PullRequest","data":{"number":1,"title":"Bootstrap project","state":"Merged","created_at":"1970-01-01T00:00:00Z","merged_at":"1970-01-01T00:00:00Z","additions":1,"deletions":0,"changed_files":1,"touched_paths_hint":[],"window":{"since":"2025-01-01","until":"2025-02-01"}}},"tags":[],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/1"}],"source":{"system":"github","url":"https://api.github.com/...","opaque_id":null}}
{"id":"788643b93f3ae25749f9d3d7c21663099d44551ae9dceb71325be71231718147","kind":"PullRequest","occurred_at":"1970-01-01T00:00:00Z","actor":{"login":"user","id":null},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Unknown"},"payload":{"type":"PullRequest","data":{"number":2,"title":"Add CI pipeline","state":"Merged","created_at":"1970-01-01T00:00:00Z","merged_at":"1970-01-01T00:00:00Z","additions":1,"deletions":0,"changed_files":1,"touched_paths_hint":[],"window":{"since":"2025-01-01","until":"2025-02-01"}}},"tags":[],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/2"}],"source":{"system":"github","url":"https://api.github.com/...","opaque_id":null}}
{"id":"fe95e5d425293dadd8112dd62e4e0199cca07b1e52e5fc1d9ff9ff47b803b780","kind":"PullRequest","occurred_at":"1970-01-01T00:00:00Z","actor":{"login":"user","id":null},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Unknown"},"payload":{"type":"PullRequest","data":{"number":3,"title":"Implement auth flow","state":"Merged","created_at":"1970-01-01T00:00:00Z","merged_at":"1970-01-01T00:00:00Z","additions":1,"deletions":0,"changed_files":1,"touched_paths_hint":[],"window":{"since":"2025-01-01","until":"2025-02-01"}}},"tags":[],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/3"}],"source":{"system":"github","url":"https://api.github.com/...","opaque_id":null}}
