crates/shiplog-render-json/tests/snapshots/snapshot__special_characters_jsonl.snap
---
source: crates/shiplog-render-json/tests/snapshot.rs
assertion_line: 64
expression: text
---
{"id":"e47c0cfd3629a43cd73571600ff6c72c615352f288d8028453c29b2c75b3eee3","kind":"PullRequest","occurred_at":"1970-01-01T00:00:00Z","actor":{"login":"user","id":null},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Unknown"},"payload":{"type":"PullRequest","data":{"number":10,"title":"Fix \"quoted\" title & <html> escapes","state":"Merged","created_at":"1970-01-01T00:00:00Z","merged_at":"1970-01-01T00:00:00Z","additions":1,"deletions":0,"changed_files":1,"touched_paths_hint":[],"window":{"since":"2025-01-01","until":"2025-02-01"}}},"tags":[],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/10"}],"source":{"system":"github","url":"https://api.github.com/...","opaque_id":null}}
{"id":"d3afb17f89262ba54ac70f49b6038e0fad66d25efc64a21eab89dd5a6ae0dad3","kind":"PullRequest","occurred_at":"1970-01-01T00:00:00Z","actor":{"login":"user","id":null},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Unknown"},"payload":{"type":"PullRequest","data":{"number":11,"title":"Handle unicode: 日本語テスト 🚀","state":"Merged","created_at":"1970-01-01T00:00:00Z","merged_at":"1970-01-01T00:00:00Z","additions":1,"deletions":0,"changed_files":1,"touched_paths_hint":[],"window":{"since":"2025-01-01","until":"2025-02-01"}}},"tags":[],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/11"}],"source":{"system":"github","url":"https://api.github.com/...","opaque_id":null}}
{"id":"46055398fa6d412e5c19896af5c7ae3114c1c776319f5f6f3b3072f1ca63f33d","kind":"PullRequest","occurred_at":"1970-01-01T00:00:00Z","actor":{"login":"user","id":null},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Unknown"},"payload":{"type":"PullRequest","data":{"number":12,"title":"Newline in title\\nshould be escaped","state":"Merged","created_at":"1970-01-01T00:00:00Z","merged_at":"1970-01-01T00:00:00Z","additions":1,"deletions":0,"changed_files":1,"touched_paths_hint":[],"window":{"since":"2025-01-01","until":"2025-02-01"}}},"tags":[],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/12"}],"source":{"system":"github","url":"https://api.github.com/...","opaque_id":null}}
